--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div data-questionType="dd" class="item simpleTextInput container col">
+                <div data-questionType="notDefined" class="item simpleTextInput container col">
                     <div class="contents row">
 
                         <div class="contents-data">
@@ -104,7 +104,7 @@
                     </div>
                 </div>
 
-                <div class="item simpleTextInput container col">
+                <div data-questionType="notDefined" class="item container col">
                     <div class="contents row">
 
                         <div class="contents-data">
@@ -142,7 +142,7 @@
                                     <option data-esRespuesta=false value="2">Artefactos Históricos</option>
                                     <option data-esRespuesta=false value="3">Fotografías</option>
                                     <option data-esRespuesta=false value="5">Conjunto Arquitectónico</option>
-                                    <option data-esRespuesta=false value="6">Otro</option>
+                                    <option data-esRespuesta=true value="6">Otro</option>
                                 </select>
                             </div>
                             <div class="form-group">
@@ -154,7 +154,7 @@
                     </div>
                 </div>
 
-                <div class="item simpleTextInput container">
+                <div data-questionType="notDefined" class="item  container">
                     <div class="contents row">
                         <div class="contents-data">
                             <div class="form-group">
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item simpleTextInput container">
+                <div data-questionType="notDefined" class="item  container">
                     <div class="contents row">
 
                         <div class="contents-data">
@@ -195,7 +195,7 @@
                     </div>
                 </div>
 
-                <div class="item simpleTextInput container">
+                <div data-questionType="notDefined" class="item  container">
                     <div class="contents row">
 
                         <div class="contents-data">
@@ -220,7 +220,7 @@
                     </div>
                 </div>
 
-                <div class="item simpleTextInput container">
+                <div data-questionType="notDefined" class="item  container">
                     <div class="contents row">
 
                         <div class="contents-data">
@@ -250,13 +250,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="item simpleTextInput container col">
+                <div data-questionType="notDefined" class="item  container col">
                     <div class="contents row">
 
                         <div class="contents-data">
 
                             <div class="form-group" id="checkImportancia">
-                                <h5 for="exampleFormControlTextarea1">Importancia para la comunidad</h5>
+                                <label for="exampleFormControlTextarea1">Importancia para la comunidad</label>
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" id="checkVigente">
                                     <label class="form-check-label" for="defaultCheck1">
@@ -279,13 +279,13 @@
                 </div>
 
 
-                <div class="item simpleTextInput container col">
+                <div data-questionType="notDefined" class="item  container col">
                     <div class="contents row">
 
                         <div class="contents-data">
 
                             <div class="form-group">
-                                <h5 for="exampleFormControlTextarea1">Datos de control</h5>
+                                <label for="exampleFormControlTextarea1">Datos de control</label>
                                 <input type="text" class="form-control" id="nombreEstudiante"
                                     placeholder="Introduzca su nombre" required />
                             </div>
