Revert "Merge branch 'read-data' of https://github.com/MariaJesus1420/tcu_fichaRegistro"
This reverts commit c4830c2ba96149a705992bb269f43409316bed18, reversing
changes made to b385f2522a38408fb5f37c5fb38426562d9022e8.

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
                         <div class="contents-data">
                             <div class="form-group">
                                 <label>Nombre del informante clave</label>
-                                <input type="text" class="form-control" id="formNombreInformante" data-esrespuesta=true
+                                <input type="text" class="form-control" id="formNombreInformante"
                                     placeholder="Introduzca el nombre" required />
                             </div>
                         </div>
@@ -97,7 +97,7 @@
 
                             <div class="form-group">
                                 <label for="formGroupExampleInput2">Edad</label>
-                                <input type="number" class="form-control" id="formEdad" placeholder="Introduzca la edad"
+                                <input type="text" class="form-control" id="formEdad" placeholder="Introduzca la edad"
                                     required />
                             </div>
                         </div>
