--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
                         <div class="contents-data">
                             <div class="form-group">
                                 <label>Nombre del informante clave</label>
-                                <input type="text" class="form-control" id="formNombreInformante"
+                                <input data-esRespuesta="true" type="text" class="form-control" id="formNombreInformante"
                                     placeholder="Introduzca el nombre" required />
                             </div>
                         </div>
