Metodos para la deteccion de cambios

--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@
                     </div>
                 </div>
 
-                <div data-questionType="notDefined" class="item  container">
+                <div data-questionType="complexRadioInput" class="item  container">
                     <div class="contents row">
 
                         <div class="contents-data">
@@ -221,7 +221,7 @@
                     </div>
                 </div>
 
-                <div data-questionType="notDefined" class="item  container">
+                <div data-questionType="complexRadioInput" class="item  container">
                     <div class="contents row">
 
                         <div class="contents-data">
