Creacion de clases y cambios para poder hacer todo de forma mas dinamica y sencilla

--- a/src/index.html
+++ b/src/index.html
@@ -232,7 +232,7 @@
                                     vecinxs?</label>
                             </div>
                             <div class="custom-control custom-radio" id="radio2">
-                                <input type="radio" id="si2" name="customRadio2" class="custom-control-input" />
+                                <input data-compleja="true" type="radio" id="si2" name="customRadio2" class="custom-control-input" />
                                 <label class="custom-control-label" for="customRadio1">SI</label>
                                 <br>
                                 <input type="radio" id="no2" name="customRadio2" class="custom-control-input" />
@@ -299,10 +299,10 @@
                 <div class="row seccionBotones">
                     <button type="button" class="btn btn-secondary" id="btnGuardarForm">Guardar</button>
                 </div>
+            </form>
         </div>
     </div>
-    </form>
-    </div>
+    
     <div class="container-fluid">
         <footer class="row py-3 border-top " id="footer">
             <div class="col-sm imagenFooter">
