--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
                                     <option data-esRespuesta=false value="2">Artefactos Históricos</option>
                                     <option data-esRespuesta=false value="3">Fotografías</option>
                                     <option data-esRespuesta=false value="5">Conjunto Arquitectónico</option>
-                                    <option data-esRespuesta=true value="6">Otro</option>
+                                    <option data-escompleja="true" data-esRespuesta=true value="6">Otro</option>
                                 </select>
                             </div>
                             <div class="form-group">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
 
-                <div data-questionType="notDefined" class="item  container">
+                <div data-questionType="complexDropDown"class="item  container">
                     <div class="contents row">
                         <div class="contents-data">
                             <div class="form-group">
@@ -170,7 +170,7 @@
                                     <option value="3">Remedio/Curación</option>
                                     <option value="4">Juego Tradicional</option>
                                     <option value="5">Tradición Comunitaria</option>
-                                    <option value="6">Otro</option>
+                                    <option data-escompleja="true" value="6">Otro</option>
                                 </select>
                             </div>
                             <div class="form-group">
@@ -207,7 +207,7 @@
                                     comunidad costarricense?</label>
                             </div>
                             <div class="custom-control custom-radio" id="radio1">
-                                <input type="radio" id="si1" name="customRadio1" class="custom-control-input" />
+                                <input data-escompleja="true" type="radio" id="si1" name="customRadio1" class="custom-control-input" />
                                 <label class="custom-control-label" for="customRadio1">SI</label>
                                 <br>
                                 <input type="radio" id="no1" name="customRadio1" class="custom-control-input" />
@@ -232,7 +232,7 @@
                                     vecinxs?</label>
                             </div>
                             <div class="custom-control custom-radio" id="radio2">
-                                <input data-compleja="true" type="radio" id="si2" name="customRadio2" class="custom-control-input" />
+                                <input data-escompleja="true" type="radio" id="si2" name="customRadio2" class="custom-control-input" />
                                 <label class="custom-control-label" for="customRadio1">SI</label>
                                 <br>
                                 <input type="radio" id="no2" name="customRadio2" class="custom-control-input" />
