--- a/src/index.html
+++ b/src/index.html
@@ -98,8 +98,8 @@
 
                             <div class="form-group">
                                 <label for="formGroupExampleInput2">Edad</label>
-                                <input type="number" data-esrespuesta=true class="form-control" id="formEdad" placeholder="Introduzca la edad"
-                                    required />
+                                <input type="number" data-esrespuesta=true class="form-control" id="formEdad"
+                                    placeholder="Introduzca la edad" required />
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                 </div>
-                <div data-questionType="complexDropDown"class="item  container">
+                <div data-questionType="complexDropDown" class="item  container">
                     <div class="contents row">
                         <div class="contents-data">
                             <div class="form-group">
@@ -138,7 +138,7 @@
 
                                 <select class="form-select" aria-label="Default select example"
                                     id="selectPatrimonioMaterial" required>
-                                    <option data-esRespuesta=true selected>Patrimonio Material</option>
+                                    <option data-esdefault="true" data-esRespuesta=true selected>Patrimonio Material</option>
                                     <option data-esRespuesta=false value="1">Monumentos Sitios</option>
                                     <option data-esRespuesta=false value="2">Artefactos Históricos</option>
                                     <option data-esRespuesta=false value="3">Fotografías</option>
@@ -146,16 +146,18 @@
                                     <option data-escompleja="true" data-esRespuesta=true value="6">Otro</option>
                                 </select>
                             </div>
-                            <div class="form-group">
-                                <label for="formGroupExampleInput2">Si digitó "Otro" ingrese cual</label>
-                                <input data-esRespuesta="false" type="text" class="form-control" id="formInputOtro"
-                                    placeholder="Introduzca el patrimonio " />
+                            <div class="extra">
+                                <div class="form-group">
+                                    <label for="formGroupExampleInput2">Si digitó "Otro" ingrese cual</label>
+                                    <input data-esRespuesta="false" type="text" class="form-control" id="formInputOtro"
+                                        placeholder="Introduzca el patrimonio " />
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div data-questionType="complexDropDown"class="item  container">
+                <div data-questionType="complexDropDown" class="item  container">
                     <div class="contents row">
                         <div class="contents-data">
                             <div class="form-group">
@@ -164,7 +166,7 @@
                             <div class="form-group">
                                 <select class="form-select" aria-label="Default select example"
                                     id="selectPatrimonioInmaterial" required>
-                                    <option selected>Patrimonio Inmaterial</option>
+                                    <option data-esdefault="true" selected>Patrimonio Inmaterial</option>
                                     <option value="1">Leyenda/Historia/Cuento/Poema/Retahíla</option>
                                     <option value="2">Receta Tradicional</option>
                                     <option value="3">Remedio/Curación</option>
@@ -173,10 +175,12 @@
                                     <option data-escompleja="true" value="6">Otro</option>
                                 </select>
                             </div>
-                            <div class="form-group">
-                                <label for="formGroupExampleInput2">Si digitó "Otro" ingrese cual</label>
-                                <input type="text" class="form-control" id="formInputOtro"
-                                    placeholder="Introduzca el patrimonio " />
+                            <div class="extra">
+                                <div class="form-group">
+                                    <label for="formGroupExampleInput2">Si digitó "Otro" ingrese cual</label>
+                                    <input type="text" class="form-control" id="formInputOtro"
+                                        placeholder="Introduzca el patrimonio " />
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -189,8 +193,8 @@
                             <div class="form-group">
                                 <label for="exampleFormControlTextarea1">Descripción de la manifestación
                                     patrimonial</label>
-                                <textarea class="form-control" data-esRespuesta=true id="textDescripcionManifestacion" required
-                                    rows="3"></textarea>
+                                <textarea class="form-control" data-esRespuesta=true id="textDescripcionManifestacion"
+                                    required rows="3"></textarea>
                             </div>
                         </div>
                     </div>
@@ -207,7 +211,8 @@
                                     comunidad costarricense?</label>
                             </div>
                             <div class="custom-control custom-radio" id="radio1">
-                                <input data-escompleja="true" type="radio" id="si1" name="customRadio1" class="custom-control-input" />
+                                <input data-escompleja="true" data-esdefault="true" type="radio" id="si1"
+                                    name="customRadio1" class="custom-control-input" />
                                 <label class="custom-control-label" for="customRadio1">SI</label>
                                 <br>
                                 <input type="radio" id="no1" name="customRadio1" class="custom-control-input" />
@@ -232,7 +237,8 @@
                                     vecinxs?</label>
                             </div>
                             <div class="custom-control custom-radio" id="radio2">
-                                <input data-escompleja="true" type="radio" id="si2" name="customRadio2" class="custom-control-input" />
+                                <input data-escompleja="true" data-esdefault="true" type="radio" id="si2" name="customRadio2"
+                                    class="custom-control-input" />
                                 <label class="custom-control-label" for="customRadio1">SI</label>
                                 <br>
                                 <input type="radio" id="no2" name="customRadio2" class="custom-control-input" />
@@ -302,7 +308,7 @@
             </form>
         </div>
     </div>
-    
+
     <div class="container-fluid">
         <footer class="row py-3 border-top " id="footer">
             <div class="col-sm imagenFooter">
