--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@
                 </div>
 
 
-                <div data-questionType="notDefined" class="item  container col">
+                <div data-questionType="simpleTextInput" class="item  container col">
                     <div class="contents row">
 
                         <div class="contents-data">
