--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
 
-                <div data-questionType="notDefined" class="item container col">
+                <div data-questionType="location" class="item container col">
                     <div class="contents row">
 
                         <div class="contents-data">
