--- a/src/formViewver.html
+++ b/src/formViewver.html
@@ -54,7 +54,7 @@
 
 
                 <div class="row seccionBotones">
-                    <button type="button" class="btn btn-secondary" id="btnGuardarForm">Guardar</button>
+                    <button type="submit" class="btn btn-secondary" id="btnGuardarForm">Guardar</button>
                 </div>
         </div>
       </div>
