--- a/src/index.html
+++ b/src/index.html
@@ -141,12 +141,11 @@
                 <div class="modal-body">
 
                     <div class="row respuestasWrapper" id="respuestasWrapper">
-                        <table class="table table-hover table-striped table-sm">
+                        <!-- <table class="table table-hover table-striped table-sm">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
                                     <th scope="col">Usuario</th>
-                                    <th scope="col">Fecha</th>
                                     <th scope="col" class="text-end">Acción</th>
                                 </tr>
                             </thead>
@@ -154,7 +153,7 @@
                                 <tr>
                                     <th scope="row">1</th>
                                     <td>Mark</td>
-                                    <td>Otto</td>
+
                                     <td class="text-end">
                                         <div class="btn-group" role="group" aria-label="Basic example">
                                             <button type="button" class="btn btn-success"><i class="bi bi-eye-fill"></i></button>
@@ -166,16 +165,27 @@
                                 <tr>
                                     <th scope="row">2</th>
                                     <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
+                                    <td class="text-end">
+                                        <div class="btn-group" role="group" aria-label="Basic example">
+                                            <button type="button" class="btn btn-success"><i class="bi bi-eye-fill"></i></button>
+                                            <button type="button" class="btn btn-danger"><i class="bi bi-x"></i></button>
+                                            
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td >Larry the Bird</td>
+                                    <td class="text-end">
+                                        <div class="btn-group" role="group" aria-label="Basic example">
+                                            <button type="button" class="btn btn-success"><i class="bi bi-eye-fill"></i></button>
+                                            <button type="button" class="btn btn-danger"><i class="bi bi-x"></i></button>
+                                            
+                                        </div>
+                                    </td>
                                 </tr>
                             </tbody>
-                        </table>
+                        </table> -->
                     </div>
                 </div>
                 <div class="modal-footer">
