--- a/src/events.html
+++ b/src/events.html
@@ -45,6 +45,18 @@
 
                         <div class="contents-data">
                             <div class="form-group">
+                                <label for="formGroupExampleInput2">Descipcion del evento</label>
+                                <input type="text" class="form-control" id="descipcion" placeholder="Introduzca la descipcion"
+                                    required />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item simpleTextInput container">
+                    <div class="contents row">
+
+                        <div class="contents-data">
+                            <div class="form-group">
                                 <label for="formGroupExampleInput2">Fecha y hora de inicio</label>
                                 <input type="datetime-local" class="form-control" id="fechaHoraInicial" placeholder=" "
                                     required />
@@ -65,9 +77,41 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <!-- <div class="col-6">
+                        <button type="button" class="btn btn-secondary" id="btnAddEvent"
+                            style="margin-top: 30px; margin-left: 500px;" onclick="back()">Crear Cuestionario</button>
+                    </div> -->
+
+                    <div class="col">
+                        <button type="button" class="btn btn-success" id="btnAddEvent"
+                            style="margin-top: 30px; margin-left: 500px;" >Guardar</button>
+                    </div>
+                    <div class="col-6">
+                        <button type="button" class="btn btn-secondary" id="btnAddEvent"
+                            style="margin-top: 30px; margin-left: 500px;" onclick="back()">Volver</button>
+                    </div>
+
+                </div>
                 <div>
-                    <button type="button" class="btn btn-secondary" id="btnAddEvent"
-                        style="margin-top: 30px; margin-left: 500px;">Guardar</button>
+                    <div class="modal" tabindex="-1" role="dialog" id="succes">
+                        <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title">Modal title</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <p>El evento se ha agregado con exito</p>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                 </div>
 
             </div>
@@ -119,7 +163,18 @@
             </div>
         </div>
     </div>
+    <script>
+        function back() {
+            location.href = "index.html";
+        };
 
+        // function guardar() {
+        //     document.getElementById("succes").style.display = "show";
+        // }
+        function open(x) {
+            $(x).modal('show');
+        }
+    </script>
 
 </body>
 
