add success modal

--- a/src/formViewver.html
+++ b/src/formViewver.html
@@ -18,7 +18,7 @@
                         <img id="imagenHeader" src="assets/img/firma-ucr-c.svg"></img>
                     </a>
                 </div>
-                <div class="col-2">
+                <!-- <div class="col-2">
 
                     <div class="dropdown">
                         <button onclick="myFunction()" class="dropbtn"></button>
@@ -27,7 +27,7 @@
                             <a href="events.html">Agregar evento</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
