--- a/src/events.html
+++ b/src/events.html
@@ -98,16 +98,13 @@
                         <div class="modal-dialog" role="document">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h5 class="modal-title">Modal title</h5>
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                              </button>
+                              <h5 class="modal-title">Proceso exitoso</h5>
                             </div>
                             <div class="modal-body">
                               <p>El evento se ha agregado con exito</p>
                             </div>
                             <div class="modal-footer">
-                              <button type="button" class="btn btn-primary">Save changes</button>
+                              <button type="button" class="btn btn-primary" onclick="back()">Aceptar</button>
                             </div>
                           </div>
                         </div>
@@ -167,13 +164,6 @@
         function back() {
             location.href = "index.html";
         };
-
-        // function guardar() {
-        //     document.getElementById("succes").style.display = "show";
-        // }
-        function open(x) {
-            $(x).modal('show');
-        }
     </script>
 
 </body>
