--- a/src/events.html
+++ b/src/events.html
@@ -78,10 +78,10 @@
                 </div>
 
                 <div class="row">
-                    <!-- <div class="col-6">
-                        <button type="button" class="btn btn-secondary" id="btnAddEvent"
+                    <div class="col-6">
+                        <button type="button" class="btn btn-secondary" id="btnCrearForm"
                             style="margin-top: 30px; margin-left: 500px;" onclick="back()">Crear Cuestionario</button>
-                    </div> -->
+                    </div>
 
                     <div class="col">
                         <button type="button" class="btn btn-success" id="btnAddEvent"
@@ -131,7 +131,7 @@
 
             </div>
             <P class="text-center avisoCopy">&copy;2021 Universidad de Costa Rica -Tel. 2511-4000. Aviso Legal. Última
-                actualización: agosto de 2021.</P>
+                actualización: enero de 2022.</P>
         </footer>
     </div>
     <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
