--- a/src/formViewver.html
+++ b/src/formViewver.html
@@ -77,7 +77,7 @@
 
             </div>
             <P class="text-center avisoCopy">&copy;2021 Universidad de Costa Rica -Tel. 2511-4000. Aviso Legal. Última
-                actualización: agosto de 2021.</P>
+                actualización: enero de 2022.</P>
 
 
         </footer>
