--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,11 @@
         <div class="container row  mainContent">
             <div class="sombreado calendarWrapper col-12">
                 <div id='calendar'></div>
+                <div >
+                    <button type="button" onclick="addEvent()" id="btnAddEvent" class="btn btn-success" style="margin-top: 20px; margin-bottom: 15px; margin-left: 28.125rem;" >Agregar Evento</button>
+                </div>
             </div>
-            <div >
-                <button type="button" onclick="addEvent()" id="btnAddEvent" class="btn btn-success" style="margin-top: 5px; margin-bottom: 15px;" >Agregar Evento</button>
-            </div>
+            
             <!-- <div class="sombreado infoEventoWrapper">
                 <h2 class="text-center">
                     Información del evento
@@ -78,7 +79,7 @@
 
             </div>
             <P class="text-center avisoCopy">&copy;2021 Universidad de Costa Rica -Tel. 2511-4000. Aviso Legal. Última
-                actualización: agosto de 2021.</P>
+                actualización: enero de 2022.</P>
 
 
         </footer>
