--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
                             <a href="">Ver eventos</a>
                             <a href="events.html">Agregar evento</a>
                             <a href="formViewver.html">Ver fichas de registro</a>
+                            <a href="questionMaker.html">Crear cuestionario</a>
                         </div>
                     </div>
                 </div> -->
