--- a/src/questionMaker.html
+++ b/src/questionMaker.html
@@ -44,10 +44,10 @@
         Question Maker
     </h1>
     <div class="mainContentWrapper container">
-        <div class="container row  mainContent">
+        <div id="mainContent" class="container row  mainContent">
 
-            <div class="row seccionBotones">
-                <button  class="col-1 btn btn-success" id="btnAgregarPregunta"><i class="bi bi-plus-circle" id="btnAgregarIcon"></i></button>
+            <div class="seccionBotones">
+                <button type="button"  class="circularBtn" id="btnAgregarPregunta"><i class="bi bi-plus" id="btnAgregarIcon"></i></button>
             </div>
         </div>
     </div>
