--- a/src/questionMaker.html
+++ b/src/questionMaker.html
@@ -46,6 +46,10 @@
     <div class="mainContentWrapper container">
         <div id="mainContent" class="container row  mainContent">
 
+            <div class="seccionBotonesArriba">
+                <button type="button"  class="circularBtn btnAzul" id="btnVerCuestionario"><i class="fas fa-eye" id="btnAgregarIcon"></i></button>
+            </div>
+
             <div class="seccionBotones">
                 <button type="button"  class="circularBtn" id="btnAgregarPregunta"><i class="bi bi-plus" id="btnAgregarIcon"></i></button>
             </div>
