--- a/src/questionMaker.html
+++ b/src/questionMaker.html
@@ -47,11 +47,12 @@
         <div id="mainContent" class="container row  mainContent">
 
             <div class="seccionBotonesArriba">
-                <button type="button"  class="circularBtn btnAzul" id="btnVerCuestionario"><i class="fas fa-eye" id="btnAgregarIcon"></i></button>
+                <button type="button"  class="circularBtn " id="btnGuardarCuestionario"><i class="far fa-save" > </i></button>
+                <button type="button"  class="circularBtn btnAzul" id="btnVerCuestionario"><i class="fas fa-eye" ></i></button>
             </div>
 
             <div class="seccionBotones">
-                <button type="button"  class="circularBtn" id="btnAgregarPregunta"><i class="bi bi-plus" id="btnAgregarIcon"></i></button>
+                <button type="button"  class="circularBtn" id="btnAgregarPregunta"><i class="bi bi-plus" ></i></button>
             </div>
         </div>
     </div>
