--- a/src/questionMaker.html
+++ b/src/questionMaker.html
@@ -45,15 +45,17 @@
     </h1>
     <div class="mainContentWrapper container">
         <div id="mainContent" class="container row  mainContent">
-
+            <form id="formMaker">
             <div class="seccionBotonesArriba">
-                <button type="button"  class="circularBtn " id="btnGuardarCuestionario"><i class="far fa-save" > </i></button>
+                <button type="submit"  class="circularBtn " id="btnGuardarCuestionario"><i class="far fa-save" > </i></button>
+               
                 <button type="button"  class="circularBtn btnAzul" id="btnVerCuestionario"><i class="fas fa-eye" ></i></button>
             </div>
-
+            <div id="itemsContainer" class="container"></div>
             <div class="seccionBotones">
                 <button type="button"  class="circularBtn" id="btnAgregarPregunta"><i class="bi bi-plus" ></i></button>
             </div>
+        </form>
         </div>
     </div>
 
