--- a/src/questionMaker.html
+++ b/src/questionMaker.html
@@ -49,7 +49,7 @@
             <div class="seccionBotonesArriba">
                 <button type="submit"  class="circularBtn " id="btnGuardarCuestionario"><i class="far fa-save" > </i></button>
                
-                <button type="button"  class="circularBtn btnAzul" id="btnVerCuestionario"><i class="fas fa-eye" ></i></button>
+                <button type="submit"  class="circularBtn btnAzul" id="btnVerCuestionario"><i class="fas fa-eye" ></i></button>
             </div>
             <div id="itemsContainer" class="container"></div>
             <div class="seccionBotones">
