--- a/src/formViewver.html
+++ b/src/formViewver.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cuestionarios</title>
 </head>
 
 <body id="start" class="formViewver">
@@ -18,41 +18,17 @@
                         <img id="imagenHeader" src="assets/img/firma-ucr-c.svg"></img>
                     </a>
                 </div>
-                <!-- <div class="col-2">
-
-                    <div class="dropdown">
-                        <button onclick="myFunction()" class="dropbtn"></button>
-                        <div id="myDropdown" class="dropdown-content">
-                            <a href="">Ver eventos</a>
-                            <a href="events.html">Agregar evento</a>
-                        </div>
-                    </div>
-                </div> -->
 
             </div>
-
-
-            <!-- <div><a href="#"
-                    style=" font-weight: normal; margin-top: 5px; background-color: #41ade7; border-color: #030303; font-size: 25px;"
-                    class="btn btn-info" id="btnSeleccion" role="button">Ver datos de eventos</a></div> -->
-
-
-            <!-- <p><a >Ver datos de eventos</a></p> -->
         </header>
     </div>
     <h1 class="text-center" style="margin-top: 30px; margin-bottom: 30px;">
-        ver Ficha de Registro TCU-374/486 Patrimonio y Cultura
+        Ficha de Registro TCU-374/486 Patrimonio y Cultura
     </h1>
     <div class="mainContentWrapper container">
         <div class="container row  mainContent">
 
-
-
             <form id="mainForm">
-
-             
-
-
                 <div class="row seccionBotones">
                     <button type="submit" class="btn btn-secondary" id="btnGuardarForm">Guardar</button>
                 </div>
