--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="modal-body">
                     <hr />
-                    <div class="row cuestionariosWrapper" id="cuestionariosWrapper"></div>
+                    <div class="row cuestionariosWrapper" id="cuestionariosWrapper"> </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -132,6 +132,22 @@
                 <div class="modal-body">
 
                     <div class="row respuestasWrapper" id="respuestasWrapper">
+                        <div class="modal-superior">
+                            <div class="modal-superior-segundo">
+                                <table class="table table-hover table-striped table-sm">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Usuario</th>
+                                            <th class="text-end">Accion</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+        
+                                    </tbody>
+                                </table>
+                            </div>
+                           </div> 
                     </div>
                 </div>
                 <div class="modal-footer">
